CCZ user value support

--- a/lib/CHANGELOG
+++ b/lib/CHANGELOG
@@ -2,5 +2,6 @@ QIODevice based ZLIB compresssion/decompression library
 =======================================================
 
 v2.0.0  ??.03.2019
-    [FIX] Fixed crash when target file device is destroyed before
+	[NEW] CCZ user 32 bit value read/write from header
+	[FIX] Fixed crash when target file device is destroyed before
 	 QZCompressor made the final write.
