--- a/lib/CHANGELOG
+++ b/lib/CHANGELOG
@@ -1,6 +1,9 @@
 QIODevice based ZLIB compresssion/decompression library
 =======================================================
 
+v2.0.1	05.09.2019
+	[NEW] QZStream is Q_OBJECT.
+
 v2.0.0  28.03.2019
 	[NEW] CCZ user 32 bit value read/write from header
 	[FIX] Fixed crash when target file device is destroyed before
